--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "curl": "^0.1.4",
     "dependencies": "0.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mssql": "^6.3.1",
     "path": "^0.12.7",
